0.0.2
  Check Repositories exist inside Buildup
  Cleanup of code

0.0.1
  Basic Validation
  Routing
  Initial Checkin