@@ -1,3 +1,3 @@
 module Ananke
-  VERSION = "0.0.2"
+  VERSION = "0.0.1"
 end
