@@ -1,6 +1,7 @@
 0.0.2
   Check Repositories exist inside Buildup
   Cleanup of code
+  Color Output for Warnings, Info and Errors
 
 0.0.1
   Basic Validation
